--- a/微信小程序/企业微信.md
+++ b/微信小程序/企业微信.md
@@ -1,5 +1,5 @@
 # 企业微信小程序开发
-[企业微信小程戏开发文档](https://developers.weixin.qq.com/miniprogram/dev/devtools/qywx-dev.html)
+[企业微信小程序开发文档](https://developer.work.weixin.qq.com/tutorial/mini-program)
 
 ## 企业内部应用和第三方应用的使用场景
 内部应用、第三方应用都可以使用小程序或者网页应用使用小程序应用，小程序需要先在微信平台上线；
@@ -13,5 +13,9 @@
 
 ### 第三方应用：
 1. 就是说我们开发好了一个应用多个公司可以使用，上线以后可以让客户按照这个应用，我们上架之后，微信应该市场中就可以看到，但是发布到应用市场特别难，因为流程特别复杂，首先申请成为服务商，开发应用提交审核，应用上线，共创测试等步骤，最后应用上架，上架后客户即可通过自由渠道安装使用，（可生产推广二维码或者生产安装链接），上架比较复杂
+
+### 企业内部应用和第三方应用接入方式:
+ 
+> 企业微信提供了通讯录管理、外部联系人管理、应用管理、消息推送、身份验证、移动端SDK、素材、OA数据接口、企业支付、电子发票等API，管理员可以使用这些API，为企业接入更多个性化的办公应用。
 
 [参考资料](https://www.jianshu.com/p/9b8a803b8366)
