--- a/数据结构与算法/图.md
+++ b/数据结构与算法/图.md
@@ -54,7 +54,7 @@ while (q.length) {
 
 ### [leetcode-65.有效数字](https://leetcode.cn/problems/valid-number/)
 **有效数字图构建：**
-![有效数字图构建](./assets//%E6%9C%89%E6%95%88%E6%95%B0%E5%AD%97%E5%9B%BE%E6%9E%84%E5%BB%BA.png)
+![有效数字图构建](./assets/%E6%9C%89%E6%95%88%E6%95%B0%E5%AD%97%E5%9B%BE%E6%9E%84%E5%BB%BA.png)
 
 ### [leetcode-417.太平洋大西洋水流问题](https://leetcode.cn/problems/pacific-atlantic-water-flow/)
 
