--- a/数据结构与算法/算法——排序、搜索.md
+++ b/数据结构与算法/算法——排序、搜索.md
@@ -41,7 +41,7 @@ Array.prototype.selectionSort = function () {
     for(let j = i; j < this.length; j++) {
       if (this[j] < this[indexMin]) indexMin = j;
     }
-    if (indexMin === i) return;
+    if (indexMin === i) continue;
     const tmp = this[i];
     this[i] = this[indexMin];
     this[indexMin] = tmp;
@@ -145,3 +145,55 @@ Array.prototype.quickSort = function () {
 const arr = [5, 4, 3, 2, 1];
 arr.quickSort();
 ```
+
+## JS 实现搜索
+### 一、顺序搜索
+* 遍历数组
+* 找到与目标值相等的值，就返回下标
+* 没搜到就返回 -1
+* 时间复杂度：O(n)
+```js
+// sequentialSearch
+Array.prototype.sequentialSearch = function (target) {
+  if (target == null) return -1;
+  for (let i = 0; i < this.length; i++) {
+    if (this[i] === target) {
+      return i;
+    }
+  }
+  return -1;
+};
+arr = [2, 313, 44, 412, 3, 4, 6, 8];
+arr.sequentialSearch(313);
+```
+### 二、二分搜索
+* 只能作用于有序数组
+* 从数组的中间值开始，如果中间值恰好等于目标值，则搜索结束
+* 如果目标值大于过小于中间值，则从大于或小于中间值的那个区间再进行二分搜索
+* 时间复杂度：O(logn)
+```js
+// binarySearch
+Array.prototype.binarySearch = function (target) {
+  if (target == null) return -1;
+  let low = 0;
+  let high = this.length - 1;
+  while (low <= high) {
+    const mid = Math.floor((low + high) / 2);
+    const midItem = this[mid];
+    if (target < midItem) {
+      high = mid - 1;
+    } else if (target > midItem) {
+      low = mid + 1;
+    } else {
+      return mid;
+    }
+  }
+  return -1;
+};
+arr = [1, 2, 3, 4, 5];
+arr.binarySearch(3);
+```
+
+### [leetcode-21.合并两个有序链表（思路类似归并排序中的合并两个有序数组）](https://leetcode.cn/problems/merge-two-sorted-lists/)
+
+### [leetcode-374.猜数字大小](https://leetcode.cn/problems/guess-number-higher-or-lower/)
