--- a/数据结构与算法/算法——排序、搜索.md
+++ b/数据结构与算法/算法——排序、搜索.md
@@ -195,5 +195,58 @@ arr.binarySearch(3);
 ```
 
 ### [leetcode-21.合并两个有序链表（思路类似归并排序中的合并两个有序数组）](https://leetcode.cn/problems/merge-two-sorted-lists/)
+```js
+/**
+ * @param {ListNode} list1
+ * @param {ListNode} list2
+ * @return {ListNode}
+ */
+var mergeTwoLists = function (list1, list2) {
+    const res = new ListNode(0);
+    let p = res;
+    let p1 = list1;
+    let p2 = list2;
+    while (p1 && p2) {
+        if (p1.val < p2.val) {
+            p.next = p1;
+            p1 = p1.next;
+        } else {
+            p.next = p2;
+            p2 = p2.next
+        }
+        p = p.next;
+    }
+    if (p1) {
+        p.next = p1;
+    }
+    if (p2) {
+        p.next = p2;
+    }
+    return res.next;
+};
+```
 
 ### [leetcode-374.猜数字大小](https://leetcode.cn/problems/guess-number-higher-or-lower/)
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var guessNumber = function (n) {
+    // 二分搜索
+    let low = 0;
+    let high = n;
+    while (low <= high) {
+        const mid = Math.floor((low + high) / 2);
+        const res = guess(mid);
+        if (res === 0) {
+            return mid;
+        } else if (res === 1) {
+            low = mid + 1;
+        } else {
+            high = mid - 1;
+        }
+    }
+    return -1;
+};
+```
