feat: 添加 leetcode 相关题目答案

--- a/数据结构与算法/数据结构——图.md
+++ b/数据结构与算法/数据结构——图.md
@@ -55,7 +55,104 @@ while (q.length) {
 ### [leetcode-65.有效数字](https://leetcode.cn/problems/valid-number/)
 **有效数字图构建：**
 ![有效数字图构建](./assets/%E6%9C%89%E6%95%88%E6%95%B0%E5%AD%97%E5%9B%BE%E6%9E%84%E5%BB%BA.png)
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var isNumber = function (s) {
+    // 构建图（领接表）
+    // blank 表示空格
+    // sign 表示 ‘+-’
+    // e 表示 e
+    // digit 表示数字
+    // . 表示 .
+    // 最终状态为 3、5、6 时，返回 true
+    const graph = {
+        0: { 'digit': 6, 'blank': 0, 'sign': 1, '.': 2 },
+        1: { 'digit': 6, '.': 2 },
+        2: { 'digit': 3 },
+        3: { 'digit': 3, 'e': 4 },
+        4: { 'digit': 5, 'sign': 7 },
+        5: { 'digit': 5 },
+        6: { 'digit': 6, '.': 3, 'e': 4 },
+        7: { 'digit': 5 }
+    };
+    let state = 0;
+    for (let i = 0; i < s.length; i++) {
+        let c = s[i];
+        if (c <= '9' && c >= '0') {
+            c = 'digit';
+        } else if (c === '+' || c === '-') {
+            c = 'sign';
+        } else if (c === ' ') {
+            c = 'blank';
+        } else {
+            c = c.toLocaleLowerCase();
+        }
+        if (!graph[state][c]) return false;
+        state = graph[state][c];
+    }
+    return state === 3 || state === 5 || state === 6
+};
+```
 
 ### [leetcode-417.太平洋大西洋水流问题](https://leetcode.cn/problems/pacific-atlantic-water-flow/)
+```js
+/**
+ * @param {number[][]} heights
+ * @return {number[][]}
+ */
+var pacificAtlantic = function (heights) {
+    // 图深度优先遍历
+    // 分别记录从海岸线开始逆流而上能访问到的节点
+    // 输出既能两个矩阵中都为 true 的节点
+    if (!heights || !heights[0]) return false
+    const m = heights.length;
+    const n = heights[0].length;
+    // 构建二维数组
+    const flow1 = Array.from({ length: m }, () => new Array(n).fill(false));
+    const flow2 = Array.from({ length: m }, () => new Array(n).fill(false));
+    // 深度优先遍历
+    const dfs = (r, c, flow) => {
+        flow[r][c] = true;
+        // 对满足条件的上下左右节点递归遍历
+        [[r - 1, c], [r + 1, c], [r, c - 1], [r, c + 1]].forEach(([nr, nc]) => {
+            if (
+                // 保证这个节点在矩阵内
+                nr < m && nc < n && nr >= 0 && nc >= 0 &&
+                // 保证逆流而上
+                heights[nr][nc] >= heights[r][c] &&
+                // 保证这个节点没有被访问过
+                !flow[nr][nc]
+            ) {
+                dfs(nr, nc, flow);
+            }
+        })
+    }
+    for (let r = 0; r < m; r++) {
+        // 第一列（太平洋海岸线）
+        dfs(r, 0, flow1);
+        // 最后一列（大西洋海岸线）
+        dfs(r, n - 1, flow2);
+    }
+    for (let c = 0; c < n; c++) {
+        // 第一行（太平洋海岸线）
+        dfs(0, c, flow1);
+        // 最后一行（大西洋海岸线）
+        dfs(m - 1, c, flow2);
+    }
+    // 输出
+    const res = [];
+    for (let r = 0; r < m; r++) {
+        for (let c = 0; c < n; c++) {
+            if (flow1[r][c] && flow2[r][c]) {
+                res.push([r, c]);
+            }
+        }
+    }
+    return res;
+};
+```
 
 ### [leetcode-133.克隆图](https://leetcode.cn/problems/clone-graph/)
