--- a/数据结构与算法/数据结构——堆.md
+++ b/数据结构与算法/数据结构——堆.md
@@ -120,7 +120,90 @@ h.size(); // 2
 ```
 
 ### [leetcode-215.数组中第K个最大元素](https://leetcode.cn/problems/kth-largest-element-in-an-array/)
+```js
+class MinHeap {
+  ...
+  // 实现最小堆类
+  ...
+}
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var findKthLargest = function (nums, k) {
+    const h = new MinHeap();
+    nums.forEach(item => {
+        h.insert(item);
+        if (h.size() > k) {
+            h.pop();
+        }
+    })
+    return h.peek();
+};
+```
 
 ### [leetcode-347.前K个高频元素](https://leetcode.cn/problems/top-k-frequent-elements/)
+```js
+class MinHeap {
+  ...
+  // 实现最小堆类
+  ...
+}
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number[]}
+ */
+var topKFrequent = function (nums, k) {
+    const m = new Map();
+    nums.forEach(item => {
+        m.set(item, m.has(item) ? m.get(item) + 1 : 1);
+    })
+    // js 原生排序，时间复杂度O(n log n)
+    // const list = Array.from(m).sort((a, b) => b[1] - a[1]).slice(0, k);
+    // return list.map(item => item[0]);
+
+    // 最小堆实现，时间复杂度O(log n)
+    const h = new MinHeap();
+    m.forEach((value, key) => {
+        h.insert({ value, key });
+        if (h.size() > k) {
+            h.pop();
+        }
+    })
+    return h.heap.map(item => item.key)
+};
+```
 
 ### [leetcode-23.合并K个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/)
+```js
+class MinHeap {
+  ...
+  // 实现最小堆类
+  ...
+}
+/**
+ * @param {ListNode[]} lists
+ * @return {ListNode}
+ */
+var mergeKLists = function (lists) {
+    // 1. 构建最小堆，并把每个链表头插入堆中
+    // 2. 弹出堆顶，接入输出链表，并将弹出堆顶所在链表的新链表头插入堆中
+    // 3. 堆中元素弹出完，则完成合并
+    let res = new ListNode();
+    let p = res;
+    const h = new MinHeap();
+    lists.forEach(list => {
+        if (!list) return;
+        h.insert(list);
+    })
+    while (h.size()) {
+        const top = h.pop();
+        p.next = top;
+        p = p.next;
+        if (top.next) h.insert(top.next);
+    }
+    return res.next;
+};
+```
