--- a/数据结构与算法/数据结构——字典.md
+++ b/数据结构与算法/数据结构——字典.md
@@ -13,11 +13,145 @@ m.clear(); // 删除所有键值对
 ```
 
 ### [leetcode-349.两个数组的交集（用字典）](https://leetcode.cn/problems/intersection-of-two-arrays/)
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number[]}
+ */
+var intersection = function (nums1, nums2) {
+    // 求交集，无序且唯一，使用集合
+    // 时间复杂度 O(n2)
+    // const set1 = new Set(nums1);
+    // const set2 = new Set(nums2);
+    // const set3 = new Set([...set1].filter(item => set2.has(item)));
+    // return [...set3];
+
+    // 用字典
+    // 时间复杂度 O(2n)
+    const m = new Map();
+    const res = [];
+    nums1.forEach(item => {
+        m.set(item, true);
+    })
+    nums2.forEach(item => {
+        if (m.get(item)) {
+            res.push(item);
+            m.delete(item);
+        }
+    })
+    return res;
+};
+```
 
 ### [leetcode-20.有效括号（用栈 + 字典）](https://leetcode.cn/problems/valid-parentheses/)
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var isValid = function (s) {
+    // 长度奇数直接返回false
+    if (s.length % 2 !== 0) return false;
+    const stack = [];
+    const m = new Map();
+    m.set('(', ')');
+    m.set('[', ']');
+    m.set('{', '}');
+    // 开头右括号直接返回false
+    if (!m.has(s[0])) return false;
+    // 循环
+    for (let i = 0; i < s.length; i++) {
+        if (m.has(s[i])) {
+            stack.push(s[i]);
+        } else {
+            const top = stack[stack.length - 1];
+            if (m.get(top) === s[i]) {
+                stack.pop();
+            } else {
+                return false;
+            }
+        }
+    }
+    return stack.length === 0;
+};
+```
 
 ### [leetcode-1.两数之和](https://leetcode.cn/problems/two-sum/)
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var twoSum = function (nums, target) {
+    const m = new Map();
+    for (let i = 0; i < nums.length; i++) {
+        const n = nums[i];
+        const t = target - nums[i];
+        if (m.has(t)) {
+            return [m.get(t), i];
+        }
+        m.set(n, i);
+    }
+    return [];
+};
+```
 
 ### [leetcode-3.无重复字符的最长子串](https://leetcode.cn/problems/longest-substring-without-repeating-characters/)
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var lengthOfLongestSubstring = function (s) {
+    // 左右指针
+    let l = 0;
+    let maxLen = 0;
+    const m = new Map();
+    for (let r = 0; r < s.length; r++) {
+        if (m.has(s[r]) && m.get(s[r]) >= l) {
+            l = m.get(s[r]) + 1;
+        }
+        maxLen = Math.max(maxLen, r - l + 1);
+        m.set(s[r], r);
+    }
+    return maxLen;
+};
+```
 
 ### [leetcode-76.最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/)
+```js
+/**
+ * @param {string} s
+ * @param {string} t
+ * @return {string}
+ */
+var minWindow = function (s, t) {
+    let l = 0;
+    let r = 0;
+    const need = new Map();
+    let res = '';
+    for (let i = 0; i < t.length; i++) {
+        need.set(t[i], need.has(t[i]) ? need.get(t[i]) + 1 : 1);
+    }
+    let needType = need.size;
+    while (r < s.length) {
+        if (need.has(s[r])) {
+            need.set(s[r], need.get(s[r]) - 1);
+            if (need.get(s[r]) === 0) needType--;
+        }
+        while (needType === 0) {
+            const newRes = s.substr(l, r - l + 1);
+            if (!res || res.length > newRes.length) res = newRes;
+            if (need.has(s[l])) {
+                need.set(s[l], need.get(s[l]) + 1);
+                if (need.get(s[l]) === 1) needType++;
+            }
+            l++;
+        }
+        r++;
+    }
+    return res;
+};
+```
