--- a/数据结构与算法/数据结构——栈.md
+++ b/数据结构与算法/数据结构——栈.md
@@ -26,7 +26,6 @@ const item2 = stack.pop();
 ((((((()) // Invalid
 (()((()))) // Valid
 ```
-### [leetcode-20.有效括号](https://leetcode.cn/problems/valid-parentheses/)
 ### 三、函数调用堆栈
 * 最后调用的函数最先执行完
 * JS 解释器用栈控制函数的调用顺序
@@ -42,4 +41,54 @@ function foo2() {
 
 foo1();
 ```
+### [leetcode-20.有效括号](https://leetcode.cn/problems/valid-parentheses/)
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var isValid = function (s) {
+    // 长度奇数直接返回false
+    if (s.length % 2 !== 0) return false;
+    const stack = [];
+    const m = new Map();
+    m.set('(', ')');
+    m.set('[', ']');
+    m.set('{', '}');
+    // 开头右括号直接返回false
+    if (!m.has(s[0])) return false;
+    // 循环
+    for (let i = 0; i < s.length; i++) {
+        if (m.has(s[i])) {
+            stack.push(s[i]);
+        } else {
+            const top = stack[stack.length - 1];
+            if (m.get(top) === s[i]) {
+                stack.pop();
+            } else {
+                return false;
+            }
+        }
+    }
+    return stack.length === 0;
+};
+```
 ### [leetcode-144.二叉树前序遍历](https://leetcode.cn/problems/binary-tree-preorder-traversal/)
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var preorderTraversal = function (root) {
+    const res = [];
+    const stack = [];
+    if (root) stack.push(root);
+    while (stack.length) {
+        const top = stack.pop();
+        res.push(top.val);
+        if (top.right) stack.push(top.right);
+        if (top.left) stack.push(top.left);
+    }
+    return res;
+};
+```
