--- a/数据结构与算法/数据结构——树.md
+++ b/数据结构与算法/数据结构——树.md
@@ -213,11 +213,120 @@ dfs(json, []);
 ```
 
 ### [leetcode-104.二叉树最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var maxDepth = function (root) {
+    // 深度优先遍历
+    let maxLevel = 0;
+    const dfs = (n, l) => {
+        if (!n) return;
+        if (!n.left && !n.right) {
+            maxLevel = Math.max(maxLevel, l);
+        }
+        dfs(n.left, l + 1);
+        dfs(n.right, l + 1);
+    }
+    dfs(root, 1);
+    return maxLevel;
+};
+```
 
 ### [leetcode-111.二叉树最小深度](https://leetcode.cn/problems/minimum-depth-of-binary-tree/)
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var minDepth = function (root) {
+    // 广度优先遍历更快
+    if (!root) return 0;
+    const q = [[root, 1]];
+    while (q.length) {
+        const [top, l] = q.shift();
+        if (!top.left && !top.right) {
+            return l;
+        }
+        if (top.left) q.push([top.left, l + 1]);
+        if (top.right) q.push([top.right, l + 1]);
+    }
+};
+```
 
 ### [leetcode-102.二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/)
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[][]}
+ */
+var levelOrder = function (root) {
+    // 广度优先遍历
+    if (!root) return [];
+    const q = [root];
+    const res = [];
+    while (q.length) {
+        let len = q.length;
+        res.push([]);
+        while (len--) {
+            const top = q.shift();
+            res[res.length - 1].push(top.val);
+            if (top.left) q.push(top.left);
+            if (top.right) q.push(top.right);
+        }
+    }
+    return res;
+};
+```
 
 ### [leetcode-94.二叉树的中序遍历](https://leetcode.cn/problems/binary-tree-inorder-traversal/)
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var inorderTraversal = function (root) {
+    if (!root) return [];
+    const res = [];
+    // 栈实现
+    const stack = [];
+    let p = root;
+    while (stack.length || p) {
+        while (p) {
+            stack.push(p);
+            p = p.left;
+        }
+        const top = stack.pop();
+        res.push(top.val);
+        p = top.right;
+    }
+    return res;
+};
+```
 
 ### [leetcode-112.路径总和](https://leetcode.cn/problems/path-sum/)
+```js
+/**
+ * @param {TreeNode} root
+ * @param {number} targetSum
+ * @return {boolean}
+ */
+var hasPathSum = function (root, targetSum) {
+    // 深度优先遍历
+    if (!root) return false;
+    let res = false;
+    const dfs = (n, sum) => {
+        if (!n) return;
+        sum += n.val;
+        if (!n.left && !n.right && sum === targetSum) {
+            // 叶子节点
+            res = true;
+        }
+        dfs(n.left, sum);
+        dfs(n.right, sum);
+    }
+    dfs(root, 0);
+    return res;
+};
+```
