--- a/数据结构与算法/数据结构——链表.md
+++ b/数据结构与算法/数据结构——链表.md
@@ -72,13 +72,133 @@ return p;
 ```
 
 ### [leetcode-237.删除链表中的节点](https://leetcode.cn/problems/delete-node-in-a-linked-list/)
+```js
+/**
+ * @param {ListNode} node
+ * @return {void} Do not return anything, modify node in-place instead.
+ */
+var deleteNode = function (node) {
+    node.val = node.next.val;
+    node.next = node.next.next;
+};
+```
 
 ### [leetcode-206.反转链表](https://leetcode.cn/problems/reverse-linked-list/)
+```js
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var reverseList = function (head) {
+    // 双指针遍历
+    let p1 = head;
+    let p2 = null;
+    while (p1) {
+        const tmp = p1.next;
+        p1.next = p2;
+        p2 = p1;
+        p1 = tmp;
+    }
+    return p2
+};
+```
 
 ### [leetcode-2.两数相加](https://leetcode.cn/problems/add-two-numbers/)
+```js
+/**
+ * @param {ListNode} l1
+ * @param {ListNode} l2
+ * @return {ListNode}
+ */
+var addTwoNumbers = function (l1, l2) {
+    const l3 = new ListNode();
+    let p1 = l1;
+    let p2 = l2;
+    let p3 = l3;
+    let carry = 0;
+    while (p1 || p2) {
+        const v1 = p1 ? p1.val : 0;
+        const v2 = p2 ? p2.val : 0;
+        const sum = v1 + v2 + carry;
+        carry = Math.floor(sum / 10);
+        p3.next = new ListNode(sum % 10);
+        if (p1) p1 = p1.next;
+        if (p2) p2 = p2.next;
+        p3 = p3.next;
+    }
+    if (carry) {
+        p3.next = new ListNode(carry);
+    }
+    return l3.next
+};
+```
 
 ### [leetcode-83.删除排序链表中的重复元素](https://leetcode.cn/problems/remove-duplicates-from-sorted-list/)
+```js
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var deleteDuplicates = function (head) {
+    let p = head;
+    while (p && p.next) {
+        if (p.val === p.next.val) {
+            p.next = p.next.next;
+        } else {
+            p = p.next;
+        }
+    }
+    return head;
+};
+```
 
 ### [leetcode-141.环形链表](https://leetcode.cn/problems/linked-list-cycle/submissions/)
+```js
+/**
+ * @param {ListNode} head
+ * @return {boolean}
+ */
+var hasCycle = function (head) {
+    let p1 = head;
+    let p2 = head;
+    while (p1 && p2 && p2.next) {
+        p1 = p1.next;
+        p2 = p2.next.next;
+        if (p1 === p2) return true
+    }
+    return false;
+};
+```
 
 ### [leetcode-234.回文链表](https://leetcode.cn/problems/palindrome-linked-list/)
+```js
+/**
+ * @param {ListNode} head
+ * @return {boolean}
+ */
+var isPalindrome = function (head) {
+    let fp = head;
+    let sp = head;
+    let reverse = null;
+    while (fp && fp.next && sp) {
+        // 快慢指针 + 翻转链表
+        fp = fp.next.next;
+        const tmp = sp.next;
+        sp.next = reverse;
+        reverse = sp;
+        sp = tmp;
+    }
+    if (fp) {
+        // 节点个数为奇数，sp 需再走一步
+        sp = sp.next;
+    }
+    while (sp && reverse) {
+        if (sp.val !== reverse.val) {
+            return false;
+        }
+        sp = sp.next;
+        reverse = reverse.next;
+    }
+    return true;
+};
+```
