--- a/数据结构与算法/数据结构——队列.md
+++ b/数据结构与算法/数据结构——队列.md
@@ -18,3 +18,16 @@ const item2 = queue.shift();
 * 使用任务队列先后处理异步任务
 
 ### [leetcode-933.最近请求次数](https://leetcode.cn/problems/number-of-recent-calls/)
+```js
+/** 
+ * @param {number} t
+ * @return {number}
+ */
+RecentCounter.prototype.ping = function (t) {
+    this.q.push(t);
+    while (this.q[0] < t - 3000) {
+        this.q.shift();
+    }
+    return this.q.length;
+};
+```
