--- a/数据结构与算法/数据结构——集合.md
+++ b/数据结构与算法/数据结构——集合.md
@@ -27,3 +27,33 @@ const arr2 = Array.from(set2);
 const set1 = new Set(arr1);
 ```
 ### [leetcode-349.两个数组的交集](https://leetcode.cn/problems/intersection-of-two-arrays/)
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number[]}
+ */
+var intersection = function (nums1, nums2) {
+    // 求交集，无序且唯一，使用集合
+    // 时间复杂度 O(n2)
+    // const set1 = new Set(nums1);
+    // const set2 = new Set(nums2);
+    // const set3 = new Set([...set1].filter(item => set2.has(item)));
+    // return [...set3];
+
+    // 用字典
+    // 时间复杂度 O(2n)
+    const m = new Map();
+    const res = [];
+    nums1.forEach(item => {
+        m.set(item, true);
+    })
+    nums2.forEach(item => {
+        if (m.get(item)) {
+            res.push(item);
+            m.delete(item);
+        }
+    })
+    return res;
+};
+```
