--- a/数据结构与算法/数据结构——栈.md
+++ b/数据结构与算法/数据结构——栈.md
@@ -41,6 +41,8 @@ function foo2() {
 
 foo1();
 ```
+
+## leetcode 相关题目
 ### [leetcode-20.有效括号](https://leetcode.cn/problems/valid-parentheses/)
 ```js
 /**
