--- a/数据结构与算法/数据结构——树.md
+++ b/数据结构与算法/数据结构——树.md
@@ -212,6 +212,7 @@ const dfs = (n, path) => {
 dfs(json, []);
 ```
 
+## leetcode 相关题目
 ### [leetcode-104.二叉树最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
 ```js
 /**
