--- a/数据结构与算法/数据结构——队列.md
+++ b/数据结构与算法/数据结构——队列.md
@@ -17,6 +17,7 @@ const item2 = queue.shift();
 * JS 单线程，无法处理异步中的并发任务
 * 使用任务队列先后处理异步任务
 
+## leetcode 相关题目
 ### [leetcode-933.最近请求次数](https://leetcode.cn/problems/number-of-recent-calls/)
 ```js
 /** 
