--- a/数据结构与算法/算法——排序、搜索.md
+++ b/数据结构与算法/算法——排序、搜索.md
@@ -194,6 +194,7 @@ arr = [1, 2, 3, 4, 5];
 arr.binarySearch(3);
 ```
 
+## leetcode 相关题目
 ### [leetcode-21.合并两个有序链表（思路类似归并排序中的合并两个有序数组）](https://leetcode.cn/problems/merge-two-sorted-lists/)
 ```js
 /**
