--- a/数据结构与算法/数据结构——字典.md
+++ b/数据结构与算法/数据结构——字典.md
@@ -12,6 +12,7 @@ m.delete('key');
 m.clear(); // 删除所有键值对
 ```
 
+## leetcode 相关题目
 ### [leetcode-349.两个数组的交集（用字典）](https://leetcode.cn/problems/intersection-of-two-arrays/)
 ```js
 /**
