--- a/数据结构与算法/数据结构——链表.md
+++ b/数据结构与算法/数据结构——链表.md
@@ -71,6 +71,7 @@ path.forEach(k => {
 return p;
 ```
 
+## leetcode 相关题目
 ### [leetcode-237.删除链表中的节点](https://leetcode.cn/problems/delete-node-in-a-linked-list/)
 ```js
 /**
