--- a/数据结构与算法/数据结构——集合.md
+++ b/数据结构与算法/数据结构——集合.md
@@ -26,6 +26,7 @@ const arr2 = Array.from(set2);
 // array -> set
 const set1 = new Set(arr1);
 ```
+## leetcode 相关题目
 ### [leetcode-349.两个数组的交集](https://leetcode.cn/problems/intersection-of-two-arrays/)
 ```js
 /**
